Uml et commentaires, à relire