@@ -15,6 +15,9 @@ public class PlayerManagement {
 
     }
 
+    /**
+     * This function create the link between a player and its position
+     */
     public void generatePlayers()
     {
         ArrayList<Goal> goals = new ArrayList<>(Arrays.asList(Goal.values()));
@@ -29,22 +32,29 @@ public class PlayerManagement {
                 case 1 -> position = new Vector2D(0, 6);
                 case 2 -> position = new Vector2D(6, 0);
                 case 3 -> position = new Vector2D(6, 6);
-                default -> throw new IllegalArgumentException("Le jeu n'est pas prévu pour autant de joueur max : "+PLAYER_NUMBER);
+                default -> throw new IllegalArgumentException("The game is not designed for that many players max : "+PLAYER_NUMBER);
             }
 
             for(int j = 0; j < Goal.values().length/PLAYER_NUMBER; j++) {
-                _goals.push(goals.get(0));
-                goals.remove(0);
+                _goals.push(goals.getFirst());
+                goals.removeFirst();
             }
 
             Player player = new Player(_goals, NAME[i]);
             addPlayer(player, position);
         }
-        nextPlayer(); // pour retourner sur le premier joueur sinon c'est le joueur 4 qui joue, mais il existe pas
+        // To start with the first player and not the last that be created
+        nextPlayer();
     }
+
+    /**
+     * This function add the new player in a table and in dictionary
+     * @param player the new player
+     * @param position the position of the new player
+     */
     private void addPlayer(Player player, Vector2D position) {
         if (_currentPlayer == PLAYER_NUMBER)
-            throw new IllegalArgumentException("Il y a trop de joueurs");
+            throw new IllegalArgumentException("There are too many players");
         _playersPositions.put(player, position);
         _players[_currentPlayer] = player;
         _currentPlayer++;
@@ -54,18 +64,24 @@ public class PlayerManagement {
     {
         return _players[_currentPlayer];
     }
+
     public void nextPlayer()
     {
         _currentPlayer++;
         if (_currentPlayer >= 4)
             _currentPlayer = 0;
     }
+
     public Vector2D getPositionCurrentPlayer()
     {
         return (_playersPositions.get(getCurrentPlayer()));
     }
 
-    public void movePlayer(Direction direction) {
+    /**
+     *
+     * @param direction where the player have to move
+     */
+    public void moveCurrentPlayer(Direction direction) {
         Player player = getCurrentPlayer();
         Vector2D vector = _playersPositions.get(player);
         switch (direction)
@@ -82,18 +98,35 @@ public class PlayerManagement {
         return _playersPositions;
     }
 
+    /**
+     *
+     * @return the Goal of the current player
+     */
     public Goal getCurrentGoalCurrentPlayer()
     {
         return getCurrentPlayer().getCurrentGoal();
     }
+
+    /**
+     * The current player can pass to its next goal
+     */
     public void nextGoalCurrentPlayer()
     {
         getCurrentPlayer().nextGoal();
     }
+
+    /**
+     *
+     * @return if the current player still have goal
+     */
     public boolean ifCurrentPlayerRestGoal()
     {
         return !getCurrentPlayer().isRestGoal();
     }
+    /**
+     *
+     * @return if the player is in its starting Tile
+     */
     public boolean ifCurrentPlayerHasComeBack()
     {
         return switch (getCurrentPlayer().getName())
@@ -102,7 +135,7 @@ public class PlayerManagement {
                     case "bleu"-> _playersPositions.get(getCurrentPlayer()).getX() == 0 && _playersPositions.get(getCurrentPlayer()).getY() == 6;
                     case "vert"-> _playersPositions.get(getCurrentPlayer()).getX() == 6 && _playersPositions.get(getCurrentPlayer()).getY() == 0;
                     case "rouge"-> _playersPositions.get(getCurrentPlayer()).getX() == 6 && _playersPositions.get(getCurrentPlayer()).getY() == 6;
-                    default -> throw new IllegalArgumentException("fuck");
+                    default -> throw new IllegalArgumentException("It is not a ");
                 };
     }
 }
